modules/gdscript/tests/scripts/analyzer/errors/dictionary_string_stringname_equivalent.gd
# https://github.com/godotengine/godot/issues/62957

func test():
	var dict = {
		&"key": "StringName",
		"key": "String"
	}

	print("Invalid dictionary: %s" % dict)
